Travel::Status::DE::IRIS 1.28 - Sun Jun 23 2019

    * Add 234 stations missing from regular DB Open Data station list
    * Add delay code 14 (Technische Störung am Bahnhof)

Travel::Status::DE::IRIS 1.27 - Wed Jun 05 2019

    * Add station Berlin Zoologischer Garten (S)

Travel::Status::DE::IRIS 1.26 - Fri May 31 2019

    * Fix DS100 code for Berlin Westkreuz
    * Add station Bonn UN Campus

Travel::Status::DE::IRIS 1.25 - Mon Apr 29 2019

    * Do not ignore trains with arrival < lookahead, even if departure >=
      lookahead.
    * Add delay code 66 (flooded area)

Travel::Status::DE::IRIS 1.24 - Sat Mar 02 2019

    * Remove erroneous double entry for Düsseldorf-Bilk
    * Fix a warning when encountering unusual train types

Travel::Status::DE::IRIS 1.23 - Sat Dec 29 2018

    * Ignore apparently useless "ZOB" (central omnibus station) links at most
      main stations. This decreases the average runtime and also fixes
      some S-Bahn trains being reported twice in München Hbf.
    * Result->qos_messages: Skip superseded messages. They're still present in
      ->messages.
    * Result->route_interesting: Filter Hbf suffixes (not just "Hbf"); include
      .hl.n (czech main station).

Travel::Status::DE::IRIS 1.22 - Sun Dec 16 2018

    * Add delay code 4 (unforeseen staff shortage, thanks to Fabian Schwarz)
    * Add delay code 37 (technical failure in carriage, thanks to @marudor)

Travel::Status::DE::IRIS 1.21 - Sun Sep 09 2018

    * Fix crash when receiving invalid XML due to network issues

Travel::Status::DE::IRIS 1.20 - Mon Aug 06 2018

    * Use schedule instead of realtime data when determining whether a train
      falls within the lookahead time frame. This fixes severely delayed
      trains being ignored even if their scheduled arrival/departure is very
      soon or has already passed.

Travel::Status::DE::IRIS 1.19 - Wed Aug 01 2018

    * db-iris: Fix "-ot" ignoring arrival delay if departure is on time